syntax = "proto3";

package com.zhufeng.proto;

option java_package = "com.zhufeng.proto";
option java_outer_classname = "StudentProto";
option java_multiple_files = true;

service StudentService {
    rpc GetRealUsername(MyRequest) returns (MyResponse) {}
}
message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 2;
}